fixed scrollbar margin

--- a/react-app/src/components/OneTask/oneTaskcss.css
+++ b/react-app/src/components/OneTask/oneTaskcss.css
@@ -112,6 +112,7 @@
     flex-direction: column;
     align-items: center;
     margin-top: 5%;
+    margin-bottom: 5%;
     justify-content: space-between;
     height: 6vh;
     /* border: 2px solid red; */
